--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: c
 os:
 - linux
 
-dist: xenial
+dist: trusty
 
 sudo: required
 
@@ -18,4 +18,3 @@ addons:
     - libkmod-dev
 
 script: autoreconf -fi && ./configure && make distcheck
-
